# MiniTasker

./: .gitignore  .gitmodules  CMakeLists.txt  ClockDisplay.cpp  ClockDisplay.h  MiniTasker.cbp  MiniTasker.cpp  MiniTasker.layout  MiniTasker.proj  README.md  TaskDisplay.cpp  TaskDisplay.h  example.json  get-tiny-code.sh  install-fonts.sh  install-icons.sh  install-service.sh  makeit.sh  mini-tasker.code-workspace  mini-tasker.service  resource-installer.sh  task-file.json  update-resources.sh  update-service.sh
icons/: download.sh
source/: ClockDisplay.cpp  ClockDisplay.h  DisplayAirQuality.cpp  DisplayAirQuality.h  DisplayBitcoinPrice.cpp  DisplayBitcoinPrice.h  DisplayClock.cpp  DisplayClock.h  DisplaySolaX.cpp  DisplaySolaX.h  DisplaySystemStatus.cpp  DisplaySystemStatus.h  DisplayTask.cpp  DisplayTask.h  DisplayTideData.cpp  DisplayTideData.h  DisplayWeather.cpp  DisplayWeather.h  FileDownload.cpp  FileDownload.h  GetWeather.cpp  GetWeather.h  Icons.cpp  Icons.h  MQTTData.cpp  MQTTData.h  MiniTasker.cpp  TaskDisplay.cpp  TaskDisplay.h  Temperature.cpp  Temperature.h  TheWeather.cpp  TheWeather.h  Tiny2D.cpp  Tiny2D.h  TinyGLES.cpp  TinyGLES.h  TinyJson.h  TinyPNG.cpp  TinySolaX.cpp  (+13 more)
